--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   background-color: #fffae6;
 }
 
-/* code {
+code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-} */
+}
