--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  @media (max-width: 480px) {
+    height: 100%;
+    row-gap: 20px;
+  }
 }
 
 /* .App-logo {
