fix: adjust styling untuk mobile responsive

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@
     height: 100%;
     row-gap: 20px;
   }
+  @media (max-width: 768px) {
+    height: 100%;
+    row-gap: 20px;
+  }
 }
 
 /* .App-logo {
